--- a/frontend-react/public/manifest.json
+++ b/frontend-react/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Myster Box App",
+  "name": "Myster Box dApp",
   "icons": [
     {
       "src": "favicon.ico",
