--- a/frontend-react/.env
+++ b/frontend-react/.env
@@ -4,6 +4,7 @@ REACT_APP_MYSTERY_BOXES_ADDRESS_RINKEBY=0xFae806Ef5fDadCBa0db4716228EC625d1FC641
 REACT_APP_MYSTERY_BOXES_ADDRESS_BSCTEST=0xFae806Ef5fDadCBa0db4716228EC625d1FC64196
 
 REACT_APP_VRFCOORDINATORMOCK_ADDRESS_LOCALHOST=0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512
+REACT_APP_VRFCOORDINATOR_ADDRESS_BSCTEST=0x6A2AAd07396B36Fe02a22b33cf443582f682c82f
 
 REACT_APP_NFT_ADDRESS_LOCALHOST=0x000000000000000000000000000000000000dead
 REACT_APP_NFT_ADDRESS_RINKEBY=0x000000000000000000000000000000000000dead
